--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   http: ^1.3.0
   flutter_bloc: ^9.1.0
   shared_preferences: ^2.5.3
+  equatable: ^2.0.7
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
