--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.5.3
   equatable: ^2.0.7
   cached_network_image: ^3.4.1
+  baseflow_plugin_template: ^2.2.0
 
 dev_dependencies:
   flutter_test:
