--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   equatable: ^2.0.7
   cached_network_image: ^3.4.1
   baseflow_plugin_template: ^2.2.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
